--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,5 +1,4 @@
 <main class="main">
-
   <div [formGroup]="formNewTask" class="formNewTask">
     <h3>{{ editingTaskIndex !== null ? 'Editar tarea' : 'Agregar nueva tarea' }}</h3>
 
@@ -18,11 +17,13 @@
   <div *ngIf="tasksList.length > 0" class="tasksListContainer">
     <h2>Tareas</h2>
     <ul>
-      <li *ngFor="let task of tasksList; let i = index" 
-          class="taskCard" 
-          [ngClass]="{'completed': task.isCompleted, 'editing': editingTaskIndex === i}">
+      <li
+        *ngFor="let task of tasksList; let i = index"
+        class="taskCard"
+        [ngClass]="{ 'completed': task.completed, 'editing': editingTaskIndex === i }"
+      >
         <div class="taskCheckbox">
-          <input type="checkbox" [checked]="task.isCompleted" (change)="toggleCompletion(i)" />
+          <input type="checkbox" [checked]="task.completed" (change)="toggleCompletion(i)" />
         </div>
         <div class="taskContent">
           <span class="taskTitle">{{ task.title }}</span>
@@ -35,7 +36,6 @@
       </li>
     </ul>
   </div>
-
 </main>
 
 <footer class="footer">
